--- a/final385_soc/final385_soc.cmp
+++ b/final385_soc/final385_soc.cmp
@@ -12,6 +12,13 @@
 			sdram_wire_dqm        : out   std_logic_vector(3 downto 0);                     -- dqm
 			sdram_wire_ras_n      : out   std_logic;                                        -- ras_n
 			sdram_wire_we_n       : out   std_logic;                                        -- we_n
+			sram_wire_DQ          : inout std_logic_vector(15 downto 0) := (others => 'X'); -- DQ
+			sram_wire_ADDR        : out   std_logic_vector(19 downto 0);                    -- ADDR
+			sram_wire_LB_N        : out   std_logic;                                        -- LB_N
+			sram_wire_UB_N        : out   std_logic;                                        -- UB_N
+			sram_wire_CE_N        : out   std_logic;                                        -- CE_N
+			sram_wire_OE_N        : out   std_logic;                                        -- OE_N
+			sram_wire_WE_N        : out   std_logic;                                        -- WE_N
 			vga_export_new_signal : out   std_logic_vector(31 downto 0)                     -- new_signal
 		);
 	end component final385_soc;
