--- a/final385_soc/final385_soc.cmp
+++ b/final385_soc/final385_soc.cmp
@@ -1,5 +1,6 @@
 	component final385_soc is
 		port (
+			button0_export         : in    std_logic_vector(3 downto 0)  := (others => 'X'); -- export
 			clk_clk                : in    std_logic                     := 'X';             -- clk
 			keycode_export         : out   std_logic_vector(7 downto 0);                     -- export
 			otg_hpi_address_export : out   std_logic_vector(1 downto 0);                     -- export
